# vue-fastapi-pm2-template

./: .env.example  .gitignore  Makefile  POSTGRES_PASSWORD_RESET.md  POSTGRES_SETUP.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: add_sample_data.py  requirements.txt  reset_password.py
backend/alembic/: README  env.py
backend/alembic/versions/: initial_migration.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  fitbit.py  message_content.py  participants.py  sms.py
backend/app/core/: config.py  security.py  tasks.py
backend/app/models/: __init__.py  base.py  fitbit.py  message.py  participant.py
backend/app/schemas/: fitbit.py  message.py  participant.py
backend/app/services/: fitbit_service.py  scheduler_service.py  twilio_service.py
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: FitbitRegistration.vue  MessageContentManager.vue  MessageHistory.vue  NavBar.vue  ParticipantForm.vue  ParticipantTable.vue
frontend/src/plugins/: axios.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  fitbit.ts  messageContent.ts  messages.ts  participants.ts
frontend/src/types/: auth.ts  fitbit.ts  message.ts  participant.ts
frontend/src/views/: FitbitView.vue  HomeView.vue  LoginView.vue  MessageView.vue  ParticipantView.vue
